# rust-web-benchmarks

./: Cargo.toml  [AMD Ryzen 9 7950X 16-Core Processor]-benchmark_results_wsl.md  [Apple M2 Max]-benchmark_results.md  [Intel(R) Core(TM) i9-9980HK CPU @ 2.40GHz]-benchmark_results.md  [Intel(R) Xeon(R) CPU E5-26xx v4]-benchmark_results.md  [Intel(R) Xeon(R) Gold 6267C CPU @ 2.60GHz]-benchmark_results.md  benchmark_results.md  rustfmt.toml
actix-web/: Cargo.toml
actix-web/src/: main.rs
argan/: Cargo.toml
argan/src/: main.rs
astra/: Cargo.toml
astra/src/: main.rs
axum/: Cargo.toml
axum/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs
gotham/: Cargo.toml
gotham/src/: main.rs
graphul/: Cargo.toml
graphul/src/: main.rs
iron/: Cargo.toml
iron/src/: main.rs
may_minihttp/: Cargo.toml
may_minihttp/src/: main.rs
nickel/: Cargo.toml
nickel/src/: main.rs
ntex/: Cargo.toml
ntex/src/: main.rs
ohkami/: Cargo.toml
ohkami/src/: main.rs
oxidy/: Cargo.toml
oxidy/src/: main.rs
poem/: Cargo.toml
poem/src/: main.rs
rocket/: Cargo.toml
rocket/src/: main.rs
rouille/: Cargo.toml
rouille/src/: main.rs
salvo/: Cargo.toml
salvo/src/: main.rs
saphir/: Cargo.toml
saphir/src/: main.rs
silent/: Cargo.toml
silent/src/: main.rs
src/: error.rs  main.rs  traits.rs  types.rs  utils.rs
src/benchmark/: executor.rs  mod.rs  orchestrator.rs  processor.rs
src/services/: metrics_collector.rs  mod.rs  service_manager.rs
summer-boot/: Cargo.toml
summer-boot/src/: main.rs
summer-boot/src/resources/: application-dev.yml  application.yml
thruster/: Cargo.toml
thruster/src/: main.rs
tide/: Cargo.toml
tide/src/: main.rs
trillium/: Cargo.toml
trillium/src/: main.rs
viz/: Cargo.toml
viz/src/: main.rs
warp/: Cargo.toml
warp/src/: main.rs
xitca-web/: Cargo.toml
xitca-web/src/: main.rs
