[package]
name = "rust-web-benchmarks"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "common",
    "axum"
]

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false
strip = false

[workspace.package]
authors = ["wang1571339199@outlook.com"]
publish = false
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
tokio = { version = "1.41.1", features = ["full"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
h2 = "0.4.6"
rand = "0.8.5"
futures = "0.3.31"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "sqlite"] }
criterion = { version = "0.5.1", features = ["async_tokio"] }

# Web Frameworks
actix-web = "4.9.0"
warp = "0.3.7"
axum = "0.7.7"
poem = "3.1.3"
rocket = "0.5.1"
salvo = "0.74.1"
may_minihttp = "0.1.11"
ohkami = "0.20.0"
viz = "0.9.0"
graphul = "1.0.1"
gotham = "0.7.4"
iron = "0.6.1"
xitca-web = "0.6.2"
ntex = "2.8.0"
argan = "0.1.2"

[dependencies]
tokio = { version = "1.41.0", features = ["full"] }
anyhow = "1.0.93"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
colored = "2.1.0"
sysinfo = "0.32.0"
toml = "0.8.19"
