[package]
name = "rust-web-benchmarks"
version = "0.1.0"
edition = "2021"
authors = ["wang1571339199@outlook.com"]
publish = false

[workspace]
members = [
    "common",
    "axum",
    "actix-web",
    "warp",
    "poem",
    "rocket",
    "salvo",
    "may_minihttp",
    "ohkami",
    "viz",
    "graphul",
    "gotham",
    "iron",
    "xitca-web",
    "ntex",
    "argan",
    "nickel",
    "oxidy",
    "silent",
    "summer-boot",
    "tide",

    "astra",
    "rouille",
    "saphir",
    "thruster",
    "trillium"
]

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false
strip = "symbols"

[workspace.package]
authors = ["wang1571339199@outlook.com"]
publish = false
version = "0.1.0"
edition = "2021"

# ********** 核心运行时依赖 **********
[workspace.dependencies]
tokio = { version = "1.41", features = ["full"] }

# ********** HTTP 底层依赖 **********
hyper-util = "0.1"
bytes = "1.9"

# ********** 序列化/反序列化 **********
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# ********** 数据库相关 **********
# sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }

# ********** 工具库 **********
anyhow = "1.0"
thiserror = "2.0"
chrono = "0.4"
colored = "3.0"
sysinfo = "0.32"
async-trait = "0.1"

http = "1.2"
mimalloc = "0.1"
num_cpus = "1"

# ********** Web 框架 **********
# 基于 hyper + tower
axum = "0"
warp = "0"
salvo = "0"

# 基于 actix-rt
actix-web = "4"
ntex = "2"

# 基于 tokio + 自定义 HTTP 实现
poem = "3"
rocket = "0"
gotham = "0"

# 基于 may 协程运行时
may_minihttp = "0"

# 其他实现
ohkami = "0"
viz = "0"
graphul = "1"
iron = "0"
xitca-web = "0"
argan = "0"

silent = "1"
summer-boot = "1"

tide = "0"
nickel = "0"
oxidy = "0"

astra = "0"

rouille = "3"
saphir = "3"
thruster = "1"
trillium = "0"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
colored = { workspace = true }
sysinfo = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
