[package]
name = "iron"
authors.workspace = true
publish.workspace = true
version.workspace = true
edition.workspace = true

[[bin]]
name = "iron"

[dependencies]
common = { path = "../common" }

iron = { workspace = true }
router = "0.6.0"

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
