[package]
name = "may_minihttp"
authors.workspace = true
publish.workspace = true
version.workspace = true
edition.workspace = true

[[bin]]
name = "may_minihttp"

[dependencies]
common = { path = "../common" }

may_minihttp = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
