[package]
name = "oxidy"
authors.workspace = true
publish.workspace = true
version.workspace = true
edition.workspace = true

[[bin]]
name = "oxidy"

[dependencies]
common = { path = "../common" }

oxidy = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
