[package]
name = "saphir"
authors.workspace = true
publish.workspace = true
version.workspace = true
edition.workspace = true

[[bin]]
name = "saphir"

[dependencies]
common = { path = "../common" }

saphir = { workspace = true, features = ["full"]}
http = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
