[package]
name = "xitca-web"
authors.workspace = true
publish.workspace = true
version.workspace = true
edition.workspace = true

[[bin]]
name = "xitca-web"

[dependencies]
common = { path = "../common" }

xitca-web = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
